--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -3,10 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Facelet Title</title>
+       
     </h:head>
     <h:body>
-        Hello from Facelets
+        <h2>
+            Hello World
+        </h2>
     </h:body>
 </html>
 
