--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -7,7 +7,7 @@
     </h:head>
     <h:body>
         <h2>
-            Hello World
+            Hello World....! 
         </h2>
     </h:body>
 </html>
